--- a/client/package.json
+++ b/client/package.json
@@ -12,12 +12,17 @@
   "dependencies": {
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.14",
+    "@tanstack/match-sorter-utils": "^8.15.1",
+    "@tanstack/qwik-table": "^8.15.3",
+    "@tanstack/react-table": "^8.15.3",
     "axios": "^1.6.8",
+    "gensync": "^1.0.0-beta.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.22.3",
     "react-router-dom": "^6.22.3",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
