--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@tanstack/qwik-table": "^8.15.3",
     "@tanstack/react-table": "^8.15.3",
     "axios": "^1.6.8",
+    "firebase": "^10.10.0",
     "gensync": "^1.0.0-beta.2",
     "react": "^18.2.0",
     "react-calendar": "^4.8.0",
